# tmux-ai-titles

./: Cargo.toml  LICENSE  README.md
.github/workflows/: bump.yml  main.yml
src/: main.rs  stats.rs
