[package]
name = "tmux-ai-titles"
version = "0.3.1"
edition = "2024"
description = "AI-powered title generation for tmux panes and windows"
license = "MIT"
repository = "https://github.com/evanpurkhiser/tmux-ai-titles"
homepage = "https://github.com/evanpurkhiser/tmux-ai-titles"
readme = "README.md"
keywords = ["cli", "tmux", "ai"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
fork = "0.7"
signal-hook = "0.3"
